fix(catalog): embedded images that 404'd could overflow

--- a/src/components/catalog-row/catalog-row.module.css
+++ b/src/components/catalog-row/catalog-row.module.css
@@ -72,6 +72,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  clip-path: inset(-5px); /* direct media could change its dimensions after being published, so we need to clip the overflow. We can't use overflow: hidden because it will hide the box-shadow */
 }
 
 .post img, .post video, .post audio {
